feat: Delete Doctor API
